<resources>
    <string name="app_name">Dicicilaja</string>
    <string name="Logo">Logo</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login">MASUK</string>
    <string name="auth_failed">Authentication failed, periksa kembali email dan password anda</string>
    <string name="auth_success">Berhasil masuk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sub_password">Tidak bisa masuk? </string>
    <string name="forgot_password">Lupa Password</string>
    <string name="email">email</string>
    <string name="nama">nama</string>
    <string name="phone">phone</string>
    <string name="daftar_mitra">Daftar Mitra</string>
    <string name="daftar_axi">Daftar AXI</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="nomor_npwp_pribadi">Nomor NPWP Pribadi</string>
    <string name="title_activity_home_crh">HomeCRHActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email_string">E-MAIL ANDA</string>
    <string name="kirim_kode_verifikasi_button">Kirim kode verifikasi</string>
    <string name="forgot_help_text">Apakah anda kesulitan mengakses akun Anda?</string>
    <string name="hubungi_admin">Hubungi Admin</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_username">Masukan Email/ID anda</string>
    <string name="err_msg_password">Masukan Kata sandi anda</string>
    <string name="spinner_area">Pilih Area</string>
    <string name="spinner_cabang">Pilih Cabang</string>
    <string name="title_activity_marketplace">MarketplaceActivity</string>
    <string name="title_activity_tcdashboard">TCDashboardActivity</string>
    <string name="main_navbar">Menu Utama</string>
    <string name="other_programs">Program Lainnya</string>
    <string name="preferences">Preferensi</string>
    <string name="home">DICICILAJA</string>
    <string name="request_simulation">SIMULASI CICILAN</string>
    <string name="request">PENGAJUAN</string>
    <string name="category">KATEGORI</string>
    <string name="axi">AXI</string>
    <string name="mitra_maxi">MITRA MAXI</string>
    <string name="help">BANTUAN</string>
    <string name="pref_menu">PENGATURAN</string>
    <string name="about">TENTANG</string>
    <string name="profile_navbar">Lihat Profil</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="start">Finish</string>
    <string name="slide_1_title">Selamat Datang!</string>
    <string name="slide_1_desc">Temukan solusi pembiayaan yang aman, menguntungkan\n dan menjangkau seluruh Indonesia hanya di aplikasi dicicilaja.com</string>
    <string name="slide_2_title">Semua Jadi Ringan</string>
    <string name="slide_2_desc">Berbagai produk dan jasa semua\n  pembayarannya bisa dicicil</string>
    <string name="slide_3_title">Cara Mudah &amp; Cepat</string>
    <string name="slide_3_desc">Pilih pembiayaan yang Anda butuhkan lalu isi form registrasi online, setelah itu dapatkan email persetujuan serta survey dari petugas kami, uang langsung cair bila pengajuan disetujui</string>
    <string name="slide_4_title">Ayo Jadi AXI</string>
    <string name="slide_4_desc">Selain bertransaksi, Anda juga bisa menjual produk-produk dicicilaja.com dengan bergabung menjadi AXI. Rekrut rekan bisnis sebanyak-banyaknya dan nikmati penghasilan tak terhingga serta kesempatan serta kesempatan jalan-jalan ke luar negeri. \nGratis !!!</string>
    <string name="slide_5_title">Untung Jadi Mitra Maxi</string>
    <string name="slide_5_desc">Mau lebih untung ?? \nJual produk Anda di dicicilaja.com \nGratis !!!!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_maxi_dashboard">MaxiDashboardActivity</string>
    <string name="title_activity_product_maxi">ProductMaxiActivity</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="deskripsi"></string>
    <string name="title_activity_spgdashboard">SPGDashboardActivity</string>
    <string name="nav_home">HOME</string>
    <string name="nav_regist">AXI TERDAFTAR</string>
    <string name="nav_trip">INFORMASI TRIP</string>
    <string name="nav_gathering">INFORMASI GATHERING</string>
    <string name="nav_submission">BUAT PENGAJUAN</string>
    <string name="nav_financing">PRODUK PEMBIAYAAN</string>
    <string name="nav_tracking">ORDER TRACKING</string>
    <string name="nav_simulation">SIMULASI CICILAN</string>
    <string name="nav_news">BERITA AXI</string>
    <string name="nav_download">UNDUH MATERI</string>
    <string name="nav_info">GUDANG INFO</string>
    <string name="nav_logout">KELUAR</string>
</resources>