<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_regist"
            android:title="@string/nav_regist" />

        <item
            android:id="@+id/nav_trip"
            android:title="@string/nav_trip" />

        <item
            android:id="@+id/nav_gathering"
            android:title="@string/nav_gathering" />

        <item
            android:id="@+id/nav_submission"
            android:title="@string/nav_submission" />

        <item
            android:id="@+id/nav_financing"
            android:title="@string/nav_financing" />

        <item
            android:id="@+id/nav_tracking"
            android:title="@string/nav_tracking" />

        <item
            android:id="@+id/nav_simulation"
            android:title="@string/nav_simulation" />

        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news" />

        <item
            android:id="@+id/nav_download"
            android:title="@string/nav_download" />

        <item
            android:id="@+id/nav_info"
            android:title="@string/nav_info" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_info" />

    </group>

</menu>