<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="id.variable.dicicilaja.Activity.ForgotPasswordActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorAccent">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:contentDescription="@string/Logo"
                app:srcCompat="@drawable/logo_color" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/capsule_text"
                android:fontFamily="sans-serif"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnVerifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/capsule_button"
                android:text="@string/kirim_kode_verifikasi_button"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/forgotHelp"
                android:layout_below="@+id/btnVerifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/forgotHelpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_help_text"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/forgotHelpButton"
                    android:layout_below="@+id/forgotHelpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/hubungi_admin"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>