<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="id.variable.orderinapp.Register.RegisterMitraActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="16dp">


            <TextView
                android:id="@+id/title_register"
                android:layout_below="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MITRA MAXI"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="27sp"
                android:layout_marginTop="25dp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/subtitle_register"
                android:layout_below="@+id/title_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Bisnis itu mudah bersama kami"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputNamaPerusahaan"
                android:layout_below="@+id/subtitle_register"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_perusahaan"
                android:textColor="#000"
                android:fontFamily="sans-serif"
                android:textSize="13sp"
                android:padding="10dp"
                android:textAlignment="center"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/inputNamaPemilik"
                android:layout_below="@+id/inputNamaPerusahaan"
                android:layout_marginTop="10dp"
                android:hint="@string/nama_pemilik"
                android:inputType="textPassword"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <Spinner
                android:id="@+id/jenisKelamin"
                android:layout_below="@id/inputNamaPemilik"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            </Spinner>
            <EditText
                android:id="@+id/inputAlamatRumah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/jenisKelamin"
                android:layout_marginTop="10dp"
                android:hint="@string/alamat_rumah"
                android:inputType="text|textMultiLine"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <EditText
            android:id="@+id/inputNoHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/inputAlamatRumah"
            android:layout_marginTop="10dp"
            android:hint="@string/nomor_handphone"
            android:inputType="text"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#000"/>
            <EditText
                android:id="@+id/inputNoTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/inputNoHP"
                android:layout_marginTop="10dp"
                android:hint="@string/nomor_telepon"
                android:inputType="text"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/inputNoKTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/inputNoTelepon"
                android:layout_marginTop="10dp"
                android:hint="@string/nomor_ktp"
                android:inputType="text"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/inputNoNPWPPribadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/inputNoKTP"
                android:layout_marginTop="10dp"
                android:hint="@string/nomor_npwp_pribadi"
                android:inputType="text"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/inputNoNPWPPerusahaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/inputNoNPWPPribadi"
                android:layout_marginTop="10dp"
                android:hint="Nomor NPWP Perusahaan"
                android:inputType="text"
                android:textSize="13sp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#000"/>
            <Button
                android:id="@+id/btnLogin"
                android:layout_below="@+id/inputNoKTP"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="13sp"
                android:textColor="@color/colorBackground"
                android:background="@drawable/capsule_button" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_below="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/lupa_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/register_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/forgot_password"
                android:weightSum="1">
                <TextView
                    android:id="@+id/register_axi"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar_axi"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/register_mitra"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar_mitra"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/register_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/powered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Powered by"
                    android:layout_marginTop="40dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/logo_corp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/adira" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
